--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/%E9%80%B8%E9%A3%9E-%E6%9D%A8-640a67192/
+  linkedin         : 逸飞-杨-640a67192/
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
