--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: "About Me"
+  - title: "Biography"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
-
   - title: "Publications"
-    url: "/#-publications"
+    url: "/#publication"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
-
-  - title: "Educations"
-    url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Education"
+    url: "/#education"
 
   - title: "Internships"
-    url: "/#-internships"
+    url: "/#internship"
+
+  - title: "Service"
+    url: "/#service"
+    
+  - title: "Miscellaneous"
+    url: "/#misc"
