--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Yifei Yang"
+title                    : "Yifei Yang(杨逸飞)"
 description              : "Ph.D@SJTU"
 repository               : "https://github.com/yangyifei729"
 google_scholar_stats_use_cdn : false
